# pprof_py

./: .buildinfo  README.md  api.html  base_model.html  direct_vs_indirect_standardization.html  fixed_vs_random_effects.html  genindex.html  index.html  introduction.html  linear_fixed_effect_model.html  linear_random_effect_model.html  logistic_fixed_effect_model.html  logistic_random_effect_model.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: api.doctree  base_model.doctree  direct_vs_indirect_standardization.doctree  fixed_vs_random_effects.doctree  index.doctree  introduction.doctree  linear_fixed_effect_model.doctree  linear_random_effect_model.doctree  logistic_fixed_effect_model.doctree  logistic_random_effect_model.doctree
.doctrees/_autosummary_generated/: pprof_py.base_model.BaseModel.doctree  pprof_py.base_model.doctree  pprof_py.linear_fixed_effect.LinearFixedEffectModel.doctree  pprof_py.linear_fixed_effect.doctree  pprof_py.linear_random_effect.LinearRandomEffectModel.doctree  pprof_py.linear_random_effect.doctree  pprof_py.logistic_fixed_effect.LogisticFixedEffectModel.doctree  pprof_py.logistic_fixed_effect.doctree  (+8 more)
_autosummary_generated/: pprof_py.base_model.BaseModel.html  pprof_py.base_model.html  pprof_py.linear_fixed_effect.LinearFixedEffectModel.html  pprof_py.linear_fixed_effect.html  pprof_py.linear_random_effect.LinearRandomEffectModel.html  pprof_py.linear_random_effect.html  pprof_py.logistic_fixed_effect.LogisticFixedEffectModel.html  pprof_py.logistic_fixed_effect.html  pprof_py.logistic_random_effect.LogisticRandomEffectModel.html  pprof_py.logistic_random_effect.html  pprof_py.plotting.html  pprof_py.plotting.plot_caterpillar.html  pprof_py.utils.html  pprof_py.utils.proc_freq.html  pprof_py.utils.setup_logger.html  pprof_py.utils.sigmoid.html
_modules/: index.html
_sources/: api.rst.txt  base_model.rst.txt  fixed_vs_random_effects.rst.txt  index.rst.txt  introduction.rst.txt  linear_fixed_effect_model.rst.txt
pprof_py/: __init__.py  algorithm.py  base_model.py  data_prep.py  linear_fixed_effect.py  linear_random_effect.py  logistic_fixed_effect.py  logistic_random_effect.py  mixins.py  plotting.py  utils.py
(+33 files in other folders)
