# setup.cfg
[metadata]
name = pprof_py
version = attr: pprof_py.__version__ 
author = Tao Xu
author_email = taoxu@umich.edu
description = pprof_py is a Python package that provides a variety of risk-adjusted models for provider profiling, efficiently handling large-scale provider data.
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/UM-KevinHe/pprof_py
license = MIT 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha 
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src 
packages = find: 
python_requires = >=3.8 
install_requires =
    pandas>=1.0 
    # Add other dependencies here if needed

[options.packages.find]
where = src

# Optional: Entry points if you create command-line scripts
# [options.entry_points]
# console_scripts =
#     my_script = sas2spark.module:main_function