# setup.cfg
[metadata]
name = pprof_py
version = attr: pprof_py.__version__ 
author = Kevin He
author_email = kevinhe@umich.edu
description = pprof_py is a Python package that provides a variety of risk-adjusted models for provider profiling, efficiently handling large-scale provider data.
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/UM-KevinHe/pprof_py
license = MIT 
license_files = LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha 
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir =
    = .
packages = find: 
python_requires = >=3.8 
install_requires =
    pandas>=1.0 
    numpy>=1.18
    scipy>=1.4
    scikit-learn>=0.22
    statsmodels>=0.10
    matplotlib>=3.0
    seaborn>=0.9
    pymer4>=0.8
    # Add other dependencies here if needed
    fast_poibin>=0.1.0

[options.packages.find]
where = .